# libutreexo

./: .clang-format  .gitignore  Makefile  Makefile.am  README  README.md  accumulator.cpp  accumulator.h  blockproof.cpp  blockproof.h  check.h  configure.ac  forest.cpp  forest.h  generate_flamegraph  int_types.h  nodepool.h  pollard.cpp  pollard.h  polnode.cpp  polnode.h  ram_forest.cpp  ram_forest.h  sources.mk  state.cpp  state.h  test_forest  test_utreexo.cpp  tests.cpp  undo.cpp  undo.h  utreexo.cpp
.github/workflows/: c-cpp.yml
.libs/: libutreexo.so.0  libutreexo.so.0.0.0
crypto/: common.h  sha512.cpp  sha512.h
include/: accumulator.h  batchproof.h  pollard.h  ram_forest.h  utreexo.h
src/: accumulator.cpp  accumulator.h  batchproof.cpp  batchproof.h  check.h  impl.h  modify.cpp  node.h  nodepool.h  pollard.cpp  pollard.h  prove.cpp  ram_forest.cpp  ram_forest.h  state.cpp  state.h  undo.cpp  verify.cpp
src/bench/: README.md  bench.cpp  bench.h  bench_utreexo.cpp  pollard.cpp  ram_forest.cpp
src/bench/util/: args.cpp  args.h  leaves.h
src/crypto/: sha512.cpp  sha512.h
src/fuzz/: batchproof.cpp  forest_state.cpp  fuzz.cpp  fuzz.h  pollard.cpp
src/profiling_demo/: profiling_demo.cpp
src/test/: accumulator_tests.cpp  nodepool_tests.cpp  state_tests.cpp  swapless_tests.cpp  tests.cpp  undo_tests.cpp  utils.cpp  utils.h
src/util/: macros.h
src/v1/: interface.cpp  interface.h  node.h  pollard.cpp  pollard.h  ram_forest.cpp  ram_forest.h
test/: accumulator_tests.cpp  state_tests.cpp
